WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193780
[iOS] Silence MediaPlayer compile warnings
https://bugs.webkit.org/show_bug.cgi?id=193780
Summary
[iOS] Silence MediaPlayer compile warnings
Eric Carlson
Reported
2019-01-24 14:05:01 PST
Silence MediaPlayer compile warnings
Attachments
Patch
(2.44 KB, patch)
2019-01-24 14:25 PST
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2019-01-24 14:05:27 PST
<
rdar://problem/47518428
>
Eric Carlson
Comment 2
2019-01-24 14:25:44 PST
Created
attachment 360038
[details]
Patch
EWS Watchlist
Comment 3
2019-01-24 14:28:37 PST
Attachment 360038
[details]
did not pass style-queue: ERROR: Source/WebCore/PAL/pal/spi/ios/MediaPlayerSPI.h:37: Misplaced OS version check. Please use a named macro in wtf/Platform.h, wtf/FeatureDefines.h, or an appropriate internal file. [build/version_check] [5] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 4
2019-01-24 18:00:06 PST
Comment on
attachment 360038
[details]
Patch Clearing flags on attachment: 360038 Committed
r240461
: <
https://trac.webkit.org/changeset/240461
>
WebKit Commit Bot
Comment 5
2019-01-24 18:00:08 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug