Cherry-pick r240461. rdar://problem/47536283

[iOS] Silence MediaPlayer compile warnings
    https://bugs.webkit.org/show_bug.cgi?id=193780
    <rdar://problem/47518428>

    Reviewed by Jer Noble.

    Source/WebCore/PAL:

    * pal/spi/ios/MediaPlayerSPI.h:

    Source/WebKit:

    * UIProcess/ios/forms/WKAirPlayRoutePicker.mm:

    Canonical link: https://commits.webkit.org/208304@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@240461 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.135@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@240463 268f45cc-cd09-0410-ab3c-d52691b4dbfc